--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -71,3 +71,17 @@ button {
     width: 300px;
     padding: 10px 10px 10px 10px;
     }
+
+    .bcu-case{
+      display: flex;
+      margin-top: 50px;
+      height: 300px;
+      background-color: #a18145;
+    }
+    .bcu-case h2{
+      margin-top: 50px;
+     }
+     .bcu-case img{
+      width: 300px;
+      padding: 10px 10px 10px 10px;
+      }
