--- a/src/Pages/Bengaluru/BCU.css
+++ b/src/Pages/Bengaluru/BCU.css
@@ -34,6 +34,11 @@
     margin-top: 30px;
     font-weight: 500;
 }
+.whatif li{
+    font-size: 20px;
+    margin-top: 30px;
+    font-weight: 500;
+}
 .why{
     display: grid;
     justify-content: center;
@@ -76,6 +81,11 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .takeaway{
+    display: grid;
+    justify-content: center;
+    margin-top: 100px; 
+}
+.whatif{
     display: grid;
     justify-content: center;
     margin-top: 100px; 
