--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -16,6 +16,21 @@
     color: #666;
     margin-top: 20px;
   }
+  .swift-case{
+    display: flex;
+    margin-top: 50px;
+    height: 300px;
+    background-color: #12a2b5;
+  }
+  .swift-case h2{
+    margin-top: 50px;
+   }
+   .swift-case img{
+    width: 300px;
+    padding: 10px 10px 10px 10px;
+    }
+
+
   .sage-case{
     display: flex;
     margin-top: 100px;
